Freecell Solver's News File
===========================
Shlomi Fish <shlomif@cpan.org>
:Date: 2009-09-05
:Revision: $Id$

1. Add the +--show-exceeded-limits+ / +-sel+ flag that removes ambiguity
in the output.

Version 3.10.0: (15-Jan-2012)
-----------------------------

1. Convert the references to the web-site and repository away from berlios.de,
as it was announced it will become offline.

2. Bug fix: correct the handling of foundations with values 0 (e.g: +H-0+,
+S-0+ ).

3. Bug fix: made the +-mi+/+--max-iters+ flag global for all instances.
Previously, it affected only the last one.

4. Add an experimental +delta_states.c+ implementation and 
+dbm_solver.c+ that uses it to drive a Freecell Solver scan with an on-disk
database (currently Google LevelDB and Berkeley DB are supported). So far
it seems that with a limited cache size, this does not scale too well.

5. Add the experimental +pruner-main.c+ (not installed by default).

6. Add support for generating "all_in_a_row" deals to 
+make_pysol_freecll_board.py+ .

7. Many small optimizations and cleanups.

Version 3.8.0: (01-Jul-2011)
----------------------------

1. Fix the crashes when using +--trim-max-stored-states+.

2. Add a man page generated by AsciiDoc instead of the token man page
that was present previously.

3. The number of states in the collection is now preserved if the verdict
was unsolved.

4. Add a +--solutions-directory+ argument to +test_multi_parallel.c+ .

5. Fix the rpm spec - +%{version}+ instead of +%{PACKAGE_VERSION}+ .

6. Add +scripts/parallel-range-solver-total+ to solve a range of deals in
parallel by splitting them into chunks.

7. Add +-DFCS_BUILD_DOCS=+ to CMake to avoid building documentation.

8. Add a way to dump the valid outputs in 
+t/t/lib/Games/Solitaire/FC_Solve/CheckResults.pm+ to files.

9. Add an environment flag to filter out the valgrind test when running
+make test+.

10. Many refactorings.

Version 3.6.0: (01-Feb-2011)
----------------------------
