@@ -7,6 +7,9 @@ Shlomi Fish <shlomif@cpan.org>
 1. Add the +--show-exceeded-limits+ / +-sel+ flag that removes ambiguity
 in the output.
 
+2. Fix invoking the solver with +--set-pruning r:tf+ in conjunction
+with +-opt+.
+
 Version 3.10.0: (15-Jan-2012)
 -----------------------------
 
